# picvu

./: .gitignore  LICENSE  README.md
src/: Cargo.toml
src/googlephotos/: Cargo.toml
src/googlephotos/src/: auth.rs  geocode.rs  lib.rs  timezone.rs
src/googlephotos/src/api/: err.rs  mod.rs  msgs.rs  raw.rs
src/picvu/: Cargo.toml
src/picvu/assets/: edit.js  edit_object.js  edit_tag.js  picvu.js  style.css
src/picvu/src/: assets.rs  db.rs  format.rs  forms.rs  main.rs  path.rs
src/picvu/src/analyse/: google.rs  img.rs  import.rs  mod.rs  takeout.rs  tz.rs  video.rs  warning.rs
src/picvu/src/bulk/: import.rs  mod.rs  progress.rs
src/picvu/src/bulk/export/: data.rs  error.rs  mod.rs  writer.rs
src/picvu/src/bulk/import/: error.rs  metadata.rs  mod.rs  scan.rs
src/picvu/src/bulk/sync/: albums.rs  error.rs  mediaitems.rs  mod.rs
src/picvu/src/bulk/tags/: mod.rs
src/picvu/src/cache/: tags.rs
src/picvu/src/icons/: mod.rs
src/picvu/src/pages/: add_object.rs  attachments.rs  auth.rs  bulk.rs  delete_object.rs  edit_object.rs  mod.rs  object_details.rs  object_listing.rs  search.rs  setup.rs  sync.rs  tags.rs
src/picvu/src/pages/templates/: censor.rs  mod.rs  rating.rs  tag_kind.rs  tags.rs  thumbnails.rs
src/picvu/src/view/: derived.rs  doc.rs  mod.rs  page.rs
src/picvudb/: Cargo.toml
src/picvudb/migrations/2020-05-11-052748_initial/: down.sql  up.sql
src/picvudb/migrations/2020-05-15_initial/: down.sql  up.sql
src/picvudb/migrations/initial/: down.sql  up.sql
src/picvudb/src/: connection.rs  lib.rs  models.rs  schema.rs  stem.rs  text_utils.rs
src/picvudb/src/api/: mod.rs  msgs.rs
src/picvudb/src/api/data/: add.rs  censor.rs  date.rs  daterange.rs  dimensions.rs  duration.rs  extref.rs  get.rs  id.rs  location.rs  markdown.rs  mod.rs  objectid.rs  objecttype.rs  orientation.rs  rating.rs  tagid.rs  tagkind.rs  tagset.rs
src/picvudb/src/err/: mod.rs
src/picvudb/src/queries/: properties.rs
src/picvudb/src/store/: access.rs  extensions.rs  mod.rs  ops.rs  store.rs  trans.rs
src/picvudb/src/tests/: mod.rs
