[package]
name = "googlephotos"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.11"
curl="0.4.29"
oauth2="2.0.0"
serde="1.0.111"
serde_json="1.0.53"
snafu="0.6.8"
url="^1.0"
urlencoding="1.0.0"
