[package]
name = "googlephotos"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.19"
curl="0.4.42"
oauth2="4.1.0"
serde="1.0.133"
serde_json="1.0.75"
snafu="0.7.0"
url="2.2.2"
urlencoding="2.1.0"
