[package]
name = "picvu"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picvudb = { path = "../picvudb" }
googlephotos = { path = "../googlephotos" }
clap="2.33.1"
actix="0.9.0"
actix-http="1.0.1"
actix-multipart="0.2.0"
actix-rt="1.1.1"
actix-web="2.0.0"
chrono="0.4.12"
flate2="1.0.16"
futures="0.3.5"
image="0.23.6"
mime="0.3.16"
mime_guess="2.0.3"
horrorshow="0.8.3"
pulldown-cmark="0.7.2"
rexif="0.5.0"
rust-embed="5.5.1"
serde="1.0.114"
serde_json="1.0.56"
serde_with="1.4.0"
snafu="0.6.8"
structopt="0.3.15"
tar="0.4.29"
tempfile="3.1.0"
urlencoding="1.1.1"
