[package]
name = "picvu"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picvudb = { path = "../picvudb" }
googlephotos = { path = "../googlephotos" }
clap="2.33.3"
actix="0.10.0"
actix-http="2.0.0"
actix-multipart="0.3.0"
actix-rt="1.1.1"
actix-web="3.1.0"
chrono="0.4.19"
flate2="1.0.18"
futures="0.3.5"
image="0.23.10"
mime="0.3.16"
mime_guess="2.0.3"
horrorshow="0.8.3"
pulldown-cmark="0.8.0"
rexif="0.5.0"
rust-embed="5.6.0"
serde="1.0.116"
serde_json="1.0.58"
serde_with="1.5.0"
snafu="0.6.9"
structopt="0.3.18"
tar="0.4.30"
tempfile="3.1.0"
urlencoding="1.1.1"
