[package]
name = "picvu"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picvudb = { path = "../picvudb" }
googlephotos = { path = "../googlephotos" }
actix="0.12.0"
actix-http="2.2.1"
actix-multipart="0.3.0"
actix-web="3.3.3"
chrono="0.4.19"
flate2="1.0.22"
futures="0.3.19"
image="0.23.14"
mime="0.3.16"
mime_guess="2.0.3"
horrorshow="0.8.4"
pulldown-cmark="0.9.1"
rexif="0.7.3"
rust-embed="6.3.0"
serde="1.0.133"
serde_json="1.0.75"
serde_with="1.11.0"
snafu="0.7.0"
structopt="0.3.26"
tar="0.4.38"
tempfile="3.3.0"
urlencoding="2.1.0"
