[package]
name = "picvudb"
version = "0.1.0"
authors = ["kezenator <github@kezenator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16="0.2.1"
byteorder="1.3.4"
chrono="0.4.12"
data-encoding="2.2.1"
mime="0.3.16"
num-traits="0.2.12"
sha2="0.9.1"
snafu="0.6.8"
serde="1.0.114"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
pulldown-cmark="0.7.2"

[dependencies.diesel]
version="1.4.5"
default-features=false
features=["sqlite", "32-column-tables"]

[dependencies.diesel_migrations]
version="1.4.0"
